src/tests/fixtures/preprocessor/errors/error7.cpp
#include <src/tests/fixtures/preprocessor/random_define.cpp>

int foo 132151

